info added to card ms

--- a/card/src/main/resources/application.yml
+++ b/card/src/main/resources/application.yml
@@ -26,3 +26,27 @@ eureka:
     registerWithEureka: true
     serviceUrl:
       defaultZone: http://localhost:8070/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+info:
+  app:
+    name: "card"
+    description: "Card microservice application"
+    version: "1.0.0"
